# glsl-types

./: .gitignore  .npmignore  Cargo.toml  README.md  bun.lockb  index.d.ts  index.js  index.ts  main.mjs  package-lock.json  package.json  readme.md  tsconfig.json
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
output/: example.ts  example1.ts  p1.ts  program1.ts
pkg/: glsl_types.cjs  glsl_types.d.ts  glsl_types.js  glsl_types_bg.cjs  glsl_types_bg.wasm  glsl_types_bg.wasm.d.ts
shaders/: example.rs  example.ts  example.vert  example1.frag  example1.vert
src/: cli.rs  command.ts  debounce.rs  error_check.rs  generator.rs  index.ts  lib.rs  log.rs  main.rs  type-generator.ts  uniform-types.ts  uniforms.rs
src/generator/: common.rs  mod.rs  rust.rs  type_script.rs
src/import_resolver/: file.rs  file_manager.rs  fn_calls.rs  fn_definitions.rs  (+5 more)
workflows/: CI.yml
(+3 files in other folders)
