[package]
edition = "2021"
name = "glsl-types"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
glsl = "7.0.0"
notify = "6.1.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
